--- a/code/figure1.Rmd
+++ b/code/figure1.Rmd
@@ -1,18 +1,3 @@
----
-output: html_document
-editor_options: 
-  chunk_output_type: console
----
-```{r}
-library(data.table)
-library(ggplot2)
-library(ggplotify)
-library(tidyverse)
-library(grid)
-library(patchwork)
-```
-
-<div style="text-align: right"> Generation of Somatic Mutation Data </div>
 ```{r data-set-creation, eval=FALSE}
 ## Data acquired from GDC
 tcga_ssm <- fread("../data/simple_somatic_mutation.open.tsv.gz", header = T, sep = "\t")
@@ -183,7 +168,7 @@ save(gdc_tumor_coding_complete, file = "../data/gdc_tumor_coding_complete.Rdata"
 rm(list = ls(all.names = T))
 gc()
 ```
-<div style="text-align: right"> Reactome Pathway Creation </div>
+
 ```{r reactome-pathway-creation, eval=FALSE}
 load("../data/gene_data.Rda")
 ## Preparing level_0 to level_1 pathway conversion table. level_0 is the master pathway. level_1 is the parent pathway
@@ -233,7 +218,7 @@ pathname2level2 <- filtered_ensembl2reactome %>% dplyr::select(PATH_ID, PATH_NAM
 rm(list = ls(all.names = T))
 gc()
 ```
-<div style="text-align: right"> Filter tissue-specific low expressed genes </div>
+
 ```{r filter-tissue-specific-low-expressed-genes, eval=FALSE}
 gtf_file <- "../data/gencode.v30.annotation.gtf"
 gencode_gtf <- rtracklayer::import(gtf_file)
@@ -458,7 +443,7 @@ rm(gdc_mut_count_patient, express_no_express_lookup, TCGA.RNA, gdc_tumor_coding_
 gc()
 save(gdc_gene_exp_adj, file = "gdc_gene_exp_adj.Rda")
 ```
-<div style="text-align: right"> Genes to pathway transformation </div>
+
 ```{r genes-to-pathways-transformation, eval=FALSE}
 load("../data/gdc_gene_exp_adj.Rda")
 load("../data/gene2_level2_lookup.Rda")
@@ -521,7 +506,7 @@ rm(df_missing, path_missing, mx, df_gene, sample_list, complete_path, pathway_or
 gc()
 save(gdc_reactome_path_analysis, file = "gdc_reactome_path_analysis.Rda")
 ```
-<div style="text-align: right"> Figure 1 data </div>
+
 ```{r tumor-clusters, eval = FALSE}
 ####################
 ## Figure 1A data ##
@@ -905,7 +890,8 @@ umap_3d_coors$ajcc_pathologic_tumor_stage[unknown] <- "Not Available"
 write.table(x = umap_3d_coors, file = "umap_3d_coors.tsv", quote = FALSE, sep = "\t", row.names = FALSE) ## save the data
 ```
 
-```{r fig-1a-1l, warning=FALSE, fig.height=15, fig.width=16, message = FALSE}
+```{r fig-1a-1l, warning=FALSE, fig.height=12, fig.width=11, message = FALSE}
+#fig.height=15, fig.width=16,
 load("../data/cancer_disrupt_heatmap.Rda")
 umap_cancertype <- fread("../data/umap_3d_coors.tsv")
 
