--- a/code/figure2.Rmd
+++ b/code/figure2.Rmd
@@ -1,11 +1,3 @@
-<div style="text-align: right"> Figure 2 Data </div>
-```{r}
-library(ggplot2)
-library(patchwork)
-library(tidyverse)
-library(cowplot)
-```
-
 ```{r oncoprint-top100-plus-panel-data-generation, eval = FALSE}
 tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
 load("../data/gdc_reactome_path_analysis.Rda")
@@ -141,8 +133,8 @@ alter_fun = list(
 save(clust_col_order, path_row_order, file = "onco_clust.Rda")
 ```
 
-```{r figure-2-plot, out.height='90%', out.width='90%'}
-
+```{r figure-2-plot, fig.align= 'center', fig.height= 7, fig.width = 7}
+#out.height='90%', out.width='90%'
 ## top100 pathways pancancer oncoprint
 load("../data/onco_ggplot.Rda") ## load data
 onco_color <- c("0" = "grey", "1" = "firebrick3") ## color scheme for oncoprint
@@ -233,8 +225,7 @@ fig2C <- pathway_counts %>% ggplot(aes(x = pathway, y = proportion, fill = color
     strip.text.y.right = element_text(angle = 0),
     strip.background = element_blank(),
     legend.position = "none"
-  ) #+ 
-  ggtitle("Cluster-specific enrichment score")
+  )
 
 
 layout <- '
