--- a/code/figure4.Rmd
+++ b/code/figure4.Rmd
@@ -1,488 +1,234 @@
-```{r figure-4-data-generation, eval = FALSE}
-tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
-load("../data/gene2_level2_lookup.Rda")
-load("../data/pathname2level2.Rda")
-load("../data/gdc_reactome_path_analysis.Rda")
-load("../data/moderate_enrich_prob.Rda")
-load("../data/gene_data.Rda")
-
-## Parameters ##
-filtered_class <- c(2) ## filtering for only class 2 samples
-n_path <- 10 ## looking at the top10 path
-enrich_cutoff <- 0.30
-################
-
-## Data Generation ##
-class_spec <- tumor_clusters %>% dplyr::select(V1, knn_clust) %>% filter(knn_clust %in% filtered_class) %>% .[,.$V1] ## sample_id for class specific
-
-toppath <- moderate_enrich_prob %>% filter(signif <= 2500 & difference >= enrich_cutoff) %>% ## signif is 95% CI with a specified cutoff
-  filter(clust %in% filtered_class) %>% ## filter the cluster
-  arrange(desc(difference)) %>% ## arrange enrichment score in descending order
-  .[, "path"] %>% as.character() %>% unique() %>% .[1:n_path] ## getting the top10 enriched pathways
-
-genes_in_path <- gene2level2_lookup %>% .[, match(pathname2level2$PATH_ID, names(.))] %>% ## match path ids
-  'colnames<-' (pathname2level2$PATH_NAME) %>% ## replace with path_names
-  dplyr::select(c(toppath)) %>% ## filter by top 10 pathways
-  rownames_to_column(var = "ensembl_gene_id") %>% left_join(., gene_data[,c("ensembl_gene_id", "external_gene_name")], by = "ensembl_gene_id") %>% column_to_rownames(var = "external_gene_name") %>% dplyr::select(-ensembl_gene_id) %>% ## replace ensembl gene id with gene name
-  .[rowSums(.[, -1])>0,]
-
-df <- upset(genes_in_path, 
-      sets = names(genes_in_path),
-      mb.ratio = c(0.55, 0.45), 
-      order.by = "freq", 
-      point.size = 3.5,
-      line.size = 2.0,
-      mainbar.y.label = "Gene Intersection",
-      sets.x.label = "Total Gene Per Pathway",
-      text.scale = c(2.5, 2.4, 2, 2.1, 2.4, 1.5),
-      number.angles = 0)
-
-make_combinations <- function(x) {
-  l <- length(x)
-  mylist <- lapply(1:l, function(y) {
-    combn(x, y, simplify = FALSE)
-  })
-  mylist
-}
-
-path_combo <- make_combinations(names(genes_in_path)) ## possible pathway combinations from 1 to 10
-
-top10path <- genes_in_path %>% rowSums() %>% as.data.frame() %>% ## getting the sums of genes in pathway
-  'colnames<-' ("sum_top10") %>% ## rename col
-  rownames_to_column(var = "gene_name") ## make rownames a col
-
-path_match_in_set <- list() ## making a list for matchings in sets
-
-for(n in 1:10) {
-  message(n)
-  path_combo_set <- path_combo[[n]] ## selecting combination set (1 combo, 2 combo, 3 combo, etc)
-  path_match_within_set <- list() ## making a list for matching within sets
-  for(p in 1:length(path_combo_set)) {
-    message(p)
-    path_name <- path_combo_set[[p]] ## selecting specific combination pathway names
-    spec_combo <- genes_in_path %>% dplyr::select(all_of(path_name)) ## select pathway combo
-    if(length(spec_combo) > 1) {
-      spec_combo <- spec_combo %>% rowSums() %>% as.data.frame() %>% ## rowSums the pathway to get the gene total membership
-        'colnames<-' ("combo") %>% filter(combo == n) ## rename col and filter for combo that is n (n combo)
-    }
-    if(length(spec_combo) == 1) {
-      names(spec_combo) <- "combo"
-    }
-    spec_combo <- spec_combo %>% rownames_to_column(var = "gene_name") %>% left_join(., top10path, by = "gene_name")
-    spec_combo$match <- spec_combo$combo == spec_combo$sum_top10
-    any_matches <- as.character(unique(spec_combo$match)) ## are there any matches?
-    if(!"TRUE" %in% any_matches) { ## if no matches then skip
-      next
-      }
-    if("TRUE" %in% any_matches) { ## if are matches then do this
-      path_match_within_set[[p]] <- spec_combo %>% filter(match == "TRUE") %>% dplyr::select(gene_name) %>% ## filter for trues and select only gene names
-        mutate(path_combo = paste0(paste(path_name, collapse=", "))) ## insert combo type
-    }
-  }    
-  if(length(path_match_within_set) > 0) {
-    path_match_in_set[[n]] <- path_match_within_set %>% do.call(rbind, .) %>% as.data.frame()
-  }
-}
-path_match_in_set <- path_match_in_set %>% do.call(rbind, .) %>% as.data.frame() ## combine the list together
-
-save(path_match_in_set, file = "path_match_in_set.Rda")
-load("../data/path_match_in_set.Rda")
-
-### getting clustering order from pheatmap
-most_genes <- path_match_in_set %>% .$path_combo %>% table() %>% as.data.frame() %>% arrange(desc(Freq)) %>% ## arranging pathway combination based on most genes involved
-  'colnames<-' (c("path_combo", "Freq")) %>% dplyr::select(path_combo) %>%
-  rownames_to_column(var = "order") 
-
-gene_order <- path_match_in_set %>% left_join(., most_genes, by = "path_combo") %>% ## left join the data together
-  arrange(order) %>% .$gene_name ## getting the gene name order
-
-
-## now need to get the gene mutation data and tumor samples 
-load("../data/gdc_tumor_coding_complete.Rdata")
-
-## Booleanize mutation count for each tumor sample
-missense <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$missense) 
-splice <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$splice)
-frameshdel <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$frameshdel)
-frameshins <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$frameshins)
-utr3 <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$utr3)
-utr5 <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$utr5)
-nonstop <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$nonstop)
-nonsense <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$nonsense)
-
-gdc_mut_count_patient <- missense + splice + frameshdel + frameshins + utr3 + utr5 + nonstop + nonsense ## add up all the mutation count
-rm(missense, splice, frameshdel, frameshins, utr3, utr5, nonstop, nonsense, gdc_tumor_coding_complete)
-gc()
-gdc_mut_count_patient[gdc_mut_count_patient > 0] <- 1 ## booleanize data, anything greater than 1 is equal to 1
-
-filtered_mut_data <- gdc_mut_count_patient %>% rownames_to_column(var = "ensembl_gene_id") %>% ## ensembl id to col
-  left_join(., gene_data[,c("ensembl_gene_id", "external_gene_name")], by = "ensembl_gene_id") %>% ## left_join data by ensembl_gene_id
-  column_to_rownames(var = "external_gene_name") %>% dplyr::select(-ensembl_gene_id) %>% ## replace ensembl_id with gene_name
-  .[rownames(.) %in% gene_order, names(.) %in% class_spec] ## filter by genes in top10 path of filtered class and tumor samples associated with it
-rm(gdc_mut_count_patient)
-gc()
-
-save(filtered_mut_data, gene_order, file = "filtered_mut_data.Rda")
-
-fig4_pheatmap <- pheatmap(filtered_mut_data[gene_order,],
-         show_rownames = T,
-         show_colnames = F,
-         treeheight_row = 0,
-         treeheight_col = 0,
-         cellheight = 5,
-         cellwidth = 1,
-         cluster_cols = T,
-         cluster_rows = F, ## turn off row clustering
-         annotation_legend = F,
-         legend_breaks = c(0, 0.25, 0.75, 1),
-         legend_labels = c("","Not Mut", "Mut", ""),
-         color = c("grey", "firebrick3"),
-         clustering_method = "ward.D2",
-         fontsize = 10,
-         legend = T)
-
-## getting sample orders
-pheatmap_order <- fig4_pheatmap$tree_col$order ## getting sample clustering order
-sample_order <- names(filtered_mut_data) ## getting the sample_id original order 
-sample_order <- sample_order[pheatmap_order] ## reorder cancer by heatmap order
-
-## stopped here ## ignore bottom using as reference
-
-class67_gene_2_path_heatmap <- filtered_mut_data %>% rownames_to_column(var = "gene_name") %>%  ## move rownames to column
-  gather(., key = "sample_id", value = "membership", -gene_name) ## wide to long format
-class67_gene_2_path_heatmap$membership <- as.character(class67_gene_2_path_heatmap$membership) ## turn boolean values into categories
-
-## set levels based on clustering algorithm above
-class67_gene_2_path_heatmap$gene_name <- factor(class67_gene_2_path_heatmap$gene_name, levels = c(rev(rownames(filtered_mut_data))))
-class67_gene_2_path_heatmap$sample_id <- factor(class67_gene_2_path_heatmap$sample_id, levels = c(sample_order))
-
-class67_gene_2_path_heatmap <- left_join(class67_gene_2_path_heatmap, path_match_in_set, by = "gene_name") ## add in path_combo for faceting 
-save(class67_gene_2_path_heatmap, file = "class67_gene_2_path_heatmap.Rda") 
-rm(list = ls(all.names = T))
-gc()
-```
-
-```{r figure-4-oncoprint, message = FALSE, fig.cap="**Figure 4: Some genes with multiple pathway memberships drive clustering.** Each column is a tumor in class 6 or 7, each row represents a gene with mutation (red) or not mutated (grey). The genes are organized according to which of the top distinguishing pathways for this class that they effect. Some genes affect multiple pathways, as indicated by the bars at left. The highlighted genes at right are all proteasomal subunits."}
-
-tumor_clusters <- fread("../data/umap_2d_3d_coors.tsv") ## load in data
-load("../data/gene2_level2_lookup.Rda")
-load("../data/pathname2level2.Rda")
-load("../data/gdc_reactome_path_analysis.Rda")
-load("../data/moderate_enrich_prob.Rda")
-load("../data/gene_data.Rda")
-# load("../data/gdc_tumor_coding_complete.Rdata")
-# 
-# missense <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$missense) 
-# splice <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$splice)
-# frameshdel <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$frameshdel)
-# frameshins <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$frameshins)
-# utr3 <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$utr3)
-# utr5 <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$utr5)
-# nonstop <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$nonstop)
-# nonsense <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$nonsense)
-# 
-# gdc_mut_count_patient <- missense + splice + frameshdel + frameshins + utr3 + utr5 + nonstop + nonsense ## add up all the mutation count
-# rm(missense, splice, frameshdel, frameshins, utr3, utr5, nonstop, nonsense, gdc_tumor_coding_complete)
+```{r forest-heatmap-data-generation, eval = FALSE}
+# rm(list = ls())
 # gc()
-# gdc_mut_count_patient[gdc_mut_count_patient > 0] <- 1 ## booleanize data, anything greater than 1 is equal to 1
-# save(gdc_mut_count_patient, file = "../data/gdc_mut_count_patient_booleanized.Rda")
-load("../data/gdc_mut_count_patient_booleanized.Rda")
-filtered_class <- 3
-n_path <- 10
-enrich_cutoff <- 0.30
-oncoprint_style <- function(filtered_class, n_path, enrich_cutoff = 0.30) {
-  class_spec <- tumor_clusters %>% dplyr::select(V1, knn_clust) %>% filter(knn_clust %in% filtered_class) %>% .[,.$V1] ## sample_id for class specific
-  toppath <- moderate_enrich_prob %>% filter(signif <= 2500 & difference >= enrich_cutoff) %>% ## signif is 95% CI with a specified cutoff
-  filter(clust %in% filtered_class) %>% ## filter the cluster
-  arrange(desc(difference)) %>% ## arrange enrichment score in descending order
-  .[, "path"] %>% as.character() %>% unique() %>% .[1:n_path] %>% na.omit() ## getting the top10 enriched pathways
-  if(length(toppath) == 0) { ## if no enriched pathways. stop and print error message
-    stop("No enriched pathways... select a lower enrich_cutoff")
-  }
-  if(length(toppath) == 1) { ## if there is only 1 enriched path. stop and print error message
-    stop("1 enriched pathway found. Use oncoprint to do your analysis")
-  }
-  genes_in_path <- gene2level2_lookup %>% .[, match(pathname2level2$PATH_ID, names(.))] %>% ## match path ids
-  'colnames<-' (pathname2level2$PATH_NAME) %>% ## replace with path_names
-  dplyr::select(c(toppath)) %>% ## filter by top 10 pathways
-  rownames_to_column(var = "ensembl_gene_id") %>% left_join(., gene_data[,c("ensembl_gene_id", "external_gene_name")], by = "ensembl_gene_id") %>% column_to_rownames(var = "external_gene_name") %>% dplyr::select(-ensembl_gene_id) %>% ## replace ensembl gene id with gene name
-  .[rowSums(.[, -1])>0,]
+# setwd("/data/GDC_TCGA/TTmanu/wd/")
+
+library(maftools)
+library(TCGAbiolinks)
+library(tidyverse)
+library(survival)
+
+kelly.colours <- c(
+  "gray95", "gray13", "gold2", "plum4", "darkorange1",
+  "lightskyblue2", "firebrick", "burlywood3", "gray51", "springgreen4",
+  "lightpink2", "deepskyblue4", "lightsalmon2", "mediumpurple4",
+  "orange", "maroon", "yellow3", "brown4", "yellow4", "sienna4", "chocolate", "gray19"
+)
+cluster.colors <- kelly.colours[-c(1)]
+names(cluster.colors) <- 0:20
+cluster_colors <- cluster.colors[2:11]
+names(cluster_colors) <- c("01", "02", "03", "04", "05", "06", "07", "08", "09", "10")
+
+### zcat simple_somatic_mutation.open.tsv.gz | grep -Fw -f mutation_classes.txt > simple_somatic_mutation.open.selmuts.tsv
+### cat <(zcat simple_somatic_mutation.open.tsv.gz | head -1) simple_somatic_mutation.open.selmuts.tsv | gzip -c - >simple_somatic_mutation.open.selmuts.tsv.gz
+all_muts <- icgcSimpleMutationToMAF("../data/simple_somatic_mutation.open.selmuts.tsv.gz", removeDuplicatedVariants = FALSE, addHugoSymbol = TRUE)
+all_muts <- distinct(.data = all_muts,
+                     Chromosome, Start_Position, End_Position, 
+                     Reference_Allele, Tumor_Seq_Allele2, consequence_type, 
+                     mutation_type, ens_id, icgc_donor_id, 
+                     submitted_sample_id, .keep_all = TRUE) %>% 
+  rename(icgc_sample_id = Tumor_Sample_Barcode) %>% 
+  mutate(Tumor_Sample_Barcode = stringr::str_trunc(submitted_sample_id, 16, ellipsis = ""))
+
+# vep.export <- all_muts %>% select(Chromosome, Start_Position, End_Position, Reference_Allele, Tumor_Seq_Allele2, Strand, icgc_mutation_id)
+# vep.export <- vep.export %>% arrange(Chromosome, Start_Position)
+# vep.export <- distinct(vep.export)
+# vep.export <- with(vep.export,
+#                    paste(Chromosome, Start_Position, End_Position,
+#                          paste(Reference_Allele, Tumor_Seq_Allele2, sep = "/"),
+#                          Strand, icgc_mutation_id, sep = "\t"))
+# writeLines(vep.export, con = "../data/vep.export.tsv")
+# vep settings availible in "../data/VEP_settings.png"
+
+clinical_plus_cluster <- readr::read_csv("../data/clinical_plus_cluster.csv")
+patient_ids <- clinical_plus_cluster$patient_id
+solid_tumor_studies <- unique(clinical_plus_cluster$type)
+tumor_clusters <- readr::read_tsv("../data/umap_3d_coors.tsv", guess_max = 10000)
+
+clinical_plus_cluster <- clinical_plus_cluster %>% rename(Tumor_Sample_Barcode = sample_id)
+clinical_plus_cluster <- left_join(clinical_plus_cluster,
+                                   tumor_clusters %>% 
+                                     select(starts_with(c("plot", "cluster", "clust_knn", "sample_id"))),
+                                   by = c("dna_mutation_id" = "sample_id"))
+all_muts <- all_muts %>% filter(Tumor_Sample_Barcode %in% clinical_plus_cluster$Tumor_Sample_Barcode)
+
+vep_output <- readr::read_tsv("../data/vep_output.basic.txt", na = c("", "NA", "-"), guess_max = 10000)
+
+selected_mut <- c("3_prime_UTR_variant", "5_prime_UTR_premature_start_codon_gain_variant", "5_prime_UTR_variant", 
+                  "frameshift_variant", "missense_variant", "splice_acceptor_variant", "splice_donor_variant",
+                  "stop_lost", "start_lost", "stop_gained")
+selected_mut_alt <- c("3'UTR", "5'UTR", 
+                      "Frame_Shift_Del", "Frame_Shift_Ins",
+                      "Missense_Mutation", 
+                      "Splice_Site", "Translation_Start_Site", 
+                      "Nonsense_Mutation", "Nonstop_Mutation")
+
+vep_output <- vep_output %>% 
+  rename(icgc_mutation_id = "#Uploaded_variation")
+
+all_muts <- all_muts %>% 
+  left_join(vep_output, 
+            by = c("consequence_type" = "Consequence", 
+                   "icgc_mutation_id" = "icgc_mutation_id",
+                   "ens_id" = "Gene"))
+
+clinical_plus_cluster$clust_knn_char <- factor(clinical_plus_cluster$clust_knn, 
+                                               levels = c(1:10), 
+                                               labels = c("01", "02", "03", "04", "05", "06", "07", "08", "09", "10"))
+
+all_muts <- left_join(all_muts, clinical_plus_cluster %>% select(Tumor_Sample_Barcode, clust_knn, clust_knn_char, type) %>% distinct())
+
+for( cluster_c in levels(clinical_plus_cluster$clust_knn_char) ) {
+  c_muts <- read.maf(maf = all_muts %>% filter(clust_knn_char == cluster_c),
+                      clinicalData = clinical_plus_cluster %>% filter(clust_knn_char == cluster_c),
+                      vc_nonSyn = selected_mut_alt, 
+                      removeDuplicatedVariants = FALSE)
+  other_muts <- read.maf(maf = all_muts %>% filter(clust_knn_char != cluster_c),
+                         clinicalData = clinical_plus_cluster %>% filter(clust_knn_char != cluster_c),
+                         vc_nonSyn = selected_mut_alt, 
+                         removeDuplicatedVariants = FALSE)
   
-  make_combinations <- function(x) { ## function to make all the possible combination of genes in pathway
-  l <- length(x)
-  mylist <- lapply(1:l, function(y) {
-    combn(x, y, simplify = FALSE)
-  })
-  mylist
-  }
-  path_combo <- make_combinations(names(genes_in_path)) ## possible pathway combinations from 1 to 10
-
-  top10path <- genes_in_path %>% rowSums() %>% as.data.frame() %>% ## getting the sums of genes in pathway
-    'colnames<-' ("sum_top10") %>% ## rename col
-    rownames_to_column(var = "gene_name") ## make rownames a col
-
-  path_match_in_set <- list() ## making a list for matchings in sets
+  c_compare <- mafCompare( c_muts,
+                           other_muts )
+  c_compare <- c_compare$results %>% 
+    as_tibble() %>% 
+    filter(adjPval < 0.01) %>%
+    arrange(or) %>% 
+    mutate(Hugo_Symbol = factor(Hugo_Symbol, levels = Hugo_Symbol)) %>%
+    mutate(ci.up = log(ci.up), ci.low = log(ci.low), or = log(or)) %>%
+    mutate(cluster = cluster_c)
   
-  for(n in 1:length(path_combo)) {
-    message(n)
-    path_combo_set <- path_combo[[n]] ## selecting combination set (1 combo, 2 combo, 3 combo, etc)
-    path_match_within_set <- list() ## making a list for matching within sets
-    for(p in 1:length(path_combo_set)) {
-      message(p)
-      path_name <- path_combo_set[[p]] ## selecting specific combination pathway names
-      spec_combo <- genes_in_path %>% dplyr::select(all_of(path_name)) ## select pathway combo
-      if(length(spec_combo) > 1) {
-        spec_combo <- spec_combo %>% rowSums() %>% as.data.frame() %>% ## rowSums the pathway to get the gene total membership
-        'colnames<-' ("combo") %>% filter(combo == n) ## rename col and filter for combo that is n (n combo)
-      }
-      if(length(spec_combo) == 1) {
-      names(spec_combo) <- "combo"
-      }
-      spec_combo <- spec_combo %>% rownames_to_column(var = "gene_name") %>% left_join(., top10path, by = "gene_name")
-      spec_combo$match <- spec_combo$combo == spec_combo$sum_top10
-      any_matches <- as.character(unique(spec_combo$match)) ## are there any matches?
-      if(!"TRUE" %in% any_matches) { ## if no matches then skip
-        next
-        }
-      if("TRUE" %in% any_matches) { ## if are matches then do this
-        path_match_within_set[[p]] <- spec_combo %>% filter(match == "TRUE") %>% dplyr::select(gene_name) %>% ## filter for trues and select only gene names
-        mutate(path_combo = paste0(paste(path_name, collapse=", "))) ## insert combo type
-      }
-   }    
-    if(length(path_match_within_set) > 0) {
-      path_match_in_set[[n]] <- path_match_within_set %>% do.call(rbind, .) %>% as.data.frame()
-    }
+  if (cluster_c == "01") {
+    all_compare <- c_compare
+  } else {
+    all_compare <- bind_rows(all_compare, c_compare)
   }
-  path_match_in_set <- path_match_in_set %>% do.call(rbind, .) %>% as.data.frame() ## combine the list together
-  ### getting clustering order from pheatmap
-  most_genes <- path_match_in_set %>% .$path_combo %>% table() %>% as.data.frame() %>% arrange(desc(Freq)) %>% ## arranging pathway combination based on most genes involved
-    'colnames<-' (c("path_combo", "Freq")) %>% dplyr::select(path_combo) %>%
-    rownames_to_column(var = "order") 
-
-  gene_order <- path_match_in_set %>% left_join(., most_genes, by = "path_combo") %>% ## left join the data together
-  arrange(as.numeric(order)) %>% .$gene_name ## getting the gene name order
-  ## gene mutation data and tumor samples - Booleanize mutation count for each tumor sample
-  message("working on mutation data")
-  filtered_mut_data <- gdc_mut_count_patient %>% rownames_to_column(var = "ensembl_gene_id") %>% ## ensembl id to col
-    left_join(., gene_data[,c("ensembl_gene_id", "external_gene_name")], by = "ensembl_gene_id") %>% ## left_join data by ensembl_gene_id
-    column_to_rownames(var = "external_gene_name") %>% dplyr::select(-ensembl_gene_id) %>% ## replace ensembl_id with gene_name
-    .[rownames(.) %in% gene_order, names(.) %in% class_spec] %>% ## filter by genes in top10 path of filtered class and tumor samples associated with it
-    .[match(gene_order, rownames(.)),]
-  message("Running pheatmap to get coordinates")
-  pheatmap_res <- pheatmap(filtered_mut_data,
-         show_rownames = T,
-         show_colnames = F,
-         treeheight_row = 0,
-         treeheight_col = 0,
-         cellheight = 5,
-         cellwidth = 1,
-         cluster_cols = T,
-         cluster_rows = F, ## turn off row clustering
-         annotation_legend = F,
-         legend_breaks = c(0, 0.25, 0.75, 1),
-         legend_labels = c("","Not Mut", "Mut", ""),
-         color = c("grey", "firebrick3"),
-         clustering_method = "ward.D2",
-         fontsize = 10,
-         legend = T)
-  dev.off()
-  pheatmap_order <- pheatmap_res$tree_col$order ## getting sample clustering order
-  sample_order <- names(filtered_mut_data) ## getting the sample_id original order 
-  sample_order <- sample_order[pheatmap_order] ## reorder cancer by heatmap order
-  message("Preparing data for plot")
-  gene_2_path_heatmap <- filtered_mut_data %>% rownames_to_column(var = "gene_name") %>%  ## move rownames to column
-  gather(., key = "sample_id", value = "membership", -gene_name) ## wide to long format
-  gene_2_path_heatmap$membership <- as.character(gene_2_path_heatmap$membership) ## turn boolean values into categories
-  ## set levels based on clustering algorithm above
-  gene_2_path_heatmap <- left_join(gene_2_path_heatmap, path_match_in_set, by = "gene_name") ## add in path_combo for faceting 
-  gene_2_path_heatmap$gene_name <- factor(gene_2_path_heatmap$gene_name, levels = c(rev(gene_order)))
-  gene_2_path_heatmap$sample_id <- factor(gene_2_path_heatmap$sample_id, levels = c(sample_order))
-  heatmap_ggplot <- ggplot(data = gene_2_path_heatmap, aes(y=gene_name, x=sample_id, fill = membership)) + 
-  geom_tile(size = 0.6) +
-  scale_fill_manual(values = c("grey", "firebrick3")) +
-  theme(axis.text.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.title.x = element_text(size = 12),
-        axis.title.y = element_blank(),
-        axis.ticks = element_blank(),
-        strip.text.y = element_blank(),
-        strip.background = element_blank(),
-        legend.position = "none") +
-    ggtitle(paste0("Class ", filtered_class))
-  ## left annotatoin data generation
-  l_anno <- path_match_in_set %>% .[match(gene_order, .$gene_name),] ## order by the gene order from the heatmap
-
-  for(p in toppath){
-    message(p)
-    l_anno <- l_anno %>% mutate(p = 0) ## create a new col named p
-    names(l_anno)[names(l_anno) == 'p'] <- p ## rename col with pathway name
-    ## for any path_combo that includes the pathway name change the 0 into a 1
-    if(p == "AUF1 (hnRNP D0) binds and destabilizes mRNA") { ## if it has this pathway grep a different way
-     l_anno[grep(pattern = "AUF1", x = l_anno$path_combo), p] <- 1
-    }
-    if(p == "Signaling by Type 1 Insulin-like Growth Factor 1 Receptor (IGF1R)") { ## if it has this pathway grep a different way
-     l_anno[grep(pattern = "Signaling by Type 1 Insulin", x = l_anno$path_combo), p] <- 1
-    }
-    if(p == "Signaling by the B Cell Receptor (BCR)") { ## if it has this pathway grep a different way
-     l_anno[grep(pattern = "Signaling by the B Cell Receptor", x = l_anno$path_combo), p] <- 1
-    }
-    if(p == "Erythropoietin activates Phosphoinositide-3-kinase (PI3K)") { ## if it has this pathway grep a different way
-     l_anno[grep(pattern = "Erythropoietin activates Phosphoinositide-3-kinase", x = l_anno$path_combo), p] <- 1
-    }
-    if(p == "Nonsense Mediated Decay (NMD) independent of the Exon Junction Complex (EJC)") { ## if it has this pathway grep a different way
-     l_anno[grep(pattern = "independent of the Exon Junction Complex", x = l_anno$path_combo), p] <- 1
-    }
-    if(p == "Nonsense Mediated Decay (NMD) enhanced by the Exon Junction Complex (EJC)") { ## if it has this pathway grep a different way
-     l_anno[grep(pattern = "enhanced by the Exon Junction Complex", x = l_anno$path_combo), p] <- 1
-    }
-    if(p != "AUF1 (hnRNP D0) binds and destabilizes mRNA" & p != "Signaling by Type 1 Insulin-like Growth Factor 1 Receptor (IGF1R)" & p != "Signaling by the B Cell Receptor (BCR)" & p != "Erythropoietin activates Phosphoinositide-3-kinase (PI3K)" & p != "Nonsense Mediated Decay (NMD) independent of the Exon Junction Complex (EJC)" & p != "Nonsense Mediated Decay (NMD) enhanced by the Exon Junction Complex (EJC)") { ## if it is not AUF1 do it normally
-    l_anno[grep(pattern = p, x = l_anno$path_combo), p] <- 1 
-    }
-  }
-
-  l_anno_ggplot <- list() ## list for storing ggplots
-  path_legend <- list()
-
-  kelly.colours <- c("gray95", "gray13", "gold2", "plum4", "darkorange1",
-                     "lightskyblue2", "firebrick", "burlywood3", "gray51", "springgreen4",
-                     "lightpink2", "deepskyblue4", "lightsalmon2", "mediumpurple4",
-                     "orange", "maroon", "yellow3", "brown4", "yellow4", "sienna4", "chocolate", "gray19")
-  
-  l_anno$gene_name <- factor(l_anno$gene_name, levels = c(rev(gene_order))) ##factor gene_name
-  for(n in 1:length(toppath)){
-    message(n)
-    p <- toppath[n]
-    message(p)
-    spec_path <- l_anno[,c("gene_name", p)]
-    names(spec_path)[names(spec_path) == p] <- "p"
-    anno_color <- c("0" = "white", "1" = kelly.colours[2+n])
-    path_ggplot <- ggplot(spec_path) + ## making plot for left annotation
-    geom_bar(mapping = aes(x = 1, y = gene_name, fill = as.character(p)), 
-            stat = "identity", 
-            width = 1) +
-    scale_fill_manual(values = anno_color, breaks = "1", name = "", labels = p) +
-    theme_void() 
-    path_legend[[n]] <- plot_grid(get_legend(path_ggplot), ncol = 1) ## extract legend from plot
-    l_anno_ggplot[[n]] <- path_ggplot + theme(legend.position = "none") ## remove legend from plot
-  }
-
-  plotlist <- c(l_anno_ggplot, list(heatmap_ggplot)) ## make a list of plots for cowplot
-
-  plot <- plot_grid(plotlist = plotlist, align = "h", ncol = 11, axis = "tb", rel_widths = c(rep(0.1, length(l_anno_ggplot)), 15))
-plot_legend <- plot_grid(plotlist = path_legend, ncol = 5)
-
-return(plot_grid(plot, plot_legend, ncol = 1, rel_heights = c(10, 1.5)))
 }
 
+save(all_compare, all_muts, clinical_plus_cluster, cluster_colors, file = "../data/forest.heatmap.data.rda")
+```
 
-fig4 <- oncoprint_style(filtered_class = c(6,7), n_path = 10)
-fig4
+```{r forest-heatmap-data-plot, fig.align='center', fig.width= 9, fig.height= 8, message=FALSE}
+#fig.width= 16, fig.height= 20,
+load("../data/forest.heatmap.data.rda")
+
+down_compare_plot <- all_compare %>%
+  group_by(cluster) %>%
+  filter(or < 0) %>%
+  filter(adjPval < 0.01) %>%
+  arrange(-or) %>%
+  # filter(M1 > 5) %>%
+  filter(is.finite(or)) %>%
+  slice_max(order_by = or, n = 10) %>%
+  arrange(cluster, or, .by.group = TRUE)
+down_compare_plot$Hugo_Symbol <- with(down_compare_plot, 
+                                      factor(as.character(Hugo_Symbol), 
+                                             levels = unique(as.character(Hugo_Symbol))))
+
+up_compare_plot <- all_compare %>%
+  group_by(cluster) %>%
+  filter(or > 0) %>%
+  arrange(-or) %>%
+  # filter(M2 > 5) %>%
+  filter(is.finite(or)) %>%
+  slice_max(order_by = or, n = 10) %>%
+  arrange(cluster, or, .by.group = TRUE)
+up_compare_plot$Hugo_Symbol <- with(up_compare_plot,
+                                    factor(as.character(Hugo_Symbol),
+                                           levels = unique(as.character(Hugo_Symbol))))
+
+up_p <- ggplot(up_compare_plot, aes(x = or, 
+                                    y = Hugo_Symbol, 
+                                    color = cluster, 
+                                    group = cluster)) +
+  geom_vline(xintercept = 0, linetype = 2) + 
+  geom_pointrange(aes(xmin = ci.low, xmax = ci.up)) +
+  scale_color_manual(values = cluster_colors) +
+  theme_classic() +
+  xlab("log odds ratio") +
+  xlim(c(0, 9)) +
+  ylab("Gene") +
+  facet_grid(cluster ~ ., scales = "free_y", drop = TRUE, space = "free_y", switch = "y") +
+  theme(panel.grid.major.y = element_line(colour = "#f0f0f0"),
+        axis.title.y = element_blank()) +
+  ggtitle("Enriched")
+
+dn_p <- ggplot(down_compare_plot, aes(x = or, y = Hugo_Symbol, color = cluster, group = cluster)) +
+  geom_vline(xintercept = 0, linetype = 2) + 
+  geom_pointrange(aes(xmin = ci.low, xmax = ci.up)) +
+  scale_color_manual(values = cluster_colors, guide = guide_none()) +
+  theme_classic() +
+  xlab("log odds ratio") +
+  xlim(c(-9, 0)) + 
+  ylab("Gene") +
+  facet_grid(cluster ~ ., scales = "free_y", drop = TRUE, space = "free_y", switch = "y") +
+  theme(panel.grid.major.y = element_line(colour = "#f0f0f0")) +
+  ggtitle("Depleted")
+
+tdat_up <- all_muts %>%
+  filter(Hugo_Symbol %in% up_compare_plot$Hugo_Symbol) %>%
+  distinct(Tumor_Sample_Barcode, Hugo_Symbol, clust_knn_char, type) %>%
+  select(type, Hugo_Symbol) %>%
+  table()
+
+tdat_up <- left_join(as.data.frame(tdat_up), 
+                  clinical_plus_cluster %>%
+                    select(Tumor_Sample_Barcode, type, clust_knn_char) %>% 
+                    distinct() %>% 
+                    group_by(type, clust_knn_char) %>% 
+                    summarise(ntumors = n())) %>% 
+  mutate(prop = Freq / ntumors) %>%
+  select(type, Hugo_Symbol, prop) %>%
+  left_join(up_compare_plot %>% select(Hugo_Symbol, cluster))
+tdat_up$Hugo_Symbol <- factor(tdat_up$Hugo_Symbol, levels = levels(up_compare_plot$Hugo_Symbol))
+
+
+tdat_up_p <- tdat_up %>% ggplot(aes(type, Hugo_Symbol, fill = prop)) + 
+  geom_tile() + 
+  scale_fill_viridis_c(option = "E", "Proportion of \nTumor Type \nMutated Within \nCluster", limits = c(0,1)) + 
+  xlab("Tumor Type") +
+  ylab("Gene Symbol") +
+  facet_grid(cluster ~ ., scales = "free_y", drop = TRUE, space = "free_y") +
+  theme_classic() +
+  theme(strip.text = element_blank(), 
+        axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+        axis.text.y = element_blank(),
+        axis.title.y = element_blank(),
+        panel.grid.major.y = element_line(colour = "#f0f0f0"))
+
+tdat_dn <- all_muts %>%
+  filter(Hugo_Symbol %in% down_compare_plot$Hugo_Symbol) %>%
+  distinct(Tumor_Sample_Barcode, Hugo_Symbol, clust_knn_char, type) %>%
+  select(type, Hugo_Symbol) %>%
+  table()
+tdat_dn <- left_join(as.data.frame(tdat_dn), 
+                     clinical_plus_cluster %>%
+                       select(Tumor_Sample_Barcode, type, clust_knn_char) %>% 
+                       distinct() %>% 
+                       group_by(type, clust_knn_char) %>% 
+                       summarise(ntumors = n())) %>% 
+  mutate(prop = Freq / ntumors) %>%
+  select(type, Hugo_Symbol, prop) %>%
+  left_join(down_compare_plot %>% select(Hugo_Symbol, cluster))
+tdat_dn$Hugo_Symbol <- factor(tdat_dn$Hugo_Symbol, levels = levels(down_compare_plot$Hugo_Symbol))
+
+tdat_dn_p <- tdat_dn %>% ggplot(aes(type, Hugo_Symbol, fill = prop)) + 
+  geom_tile() + 
+  scale_fill_viridis_c(option = "E", "Proportion of \nTumor Type \nMutated Within \nCluster", limits = c(0,1)) + 
+  xlab("Tumor Type") +
+  ylab("Gene Symbol") +
+  guides(fill = FALSE) +
+  facet_grid(cluster ~ ., scales = "free_y", drop = TRUE, space = "free_y") +
+  theme_classic() +
+  theme(strip.text = element_blank(), 
+        axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.5),
+        axis.text.y = element_blank(),
+        axis.title.y = element_blank(),
+        panel.grid.major.y = element_line(colour = "#f0f0f0"))
+
+layout <- "ABBCDD"
+dn_p + tdat_dn_p + up_p + tdat_up_p + plot_layout(guides = 'collect', design = layout) & theme(legend.position = "bottom")
 
 ```
 
-
-```{r figure-4, message = FALSE, fig.cap="**Figure 4: Some genes with multiple pathway memberships drive clustering.** Each column is a tumor in class 6 or 7, each row represents a gene with mutation (red) or not mutated (grey). The genes are organized according to which of the top distinguishing pathways for this class that they effect. Some genes affect multiple pathways, as indicated by the bars at left. The highlighted genes at right are all proteasomal subunits.", eval = FALSE}
-load("../data/class67_gene_2_path_heatmap.Rda") ## load data
-load("../data/path_match_in_set.Rda")
-
-### getting facet ordering
-most_genes <- path_match_in_set %>% .$path_combo %>% table() %>% as.data.frame() %>% arrange(desc(Freq)) %>% ## arranging pathway combination based on most genes involved
-  'colnames<-' (c("path_combo", "Freq")) %>% 
-  rownames_to_column(var = "order") 
-
-gene_order <- path_match_in_set %>% left_join(., most_genes, by = "path_combo") %>% ## left join the data together
-  arrange(order) %>% .$gene_name ## getting the gene name order
-
-class67_gene_2_path_heatmap$gene_name <- factor(class67_gene_2_path_heatmap$gene_name, levels = c(rev(gene_order)))
-
-fig4 <- ggplot(data = class67_gene_2_path_heatmap, aes(y=gene_name, x=sample_id, fill = membership)) + 
-  geom_tile(size = 0.6) +
-  scale_fill_manual(values = c("grey", "firebrick3")) +
-  theme(axis.text.x = element_blank(),
-        axis.text.y = element_blank(),
-        axis.title.x = element_text(size = 12),
-        axis.title.y = element_blank(),
-        axis.ticks = element_blank(),
-        strip.text.y = element_blank(),
-        strip.background = element_blank(),
-        legend.position = "none") 
-
-load("../data/path_match_in_set.Rda")
-
-gene_order <- path_match_in_set %>% left_join(., most_genes, by = "path_combo") %>% ## left join the data together
-  arrange(order) %>% .$gene_name ## getting the gene name order
-
-## right annotation data generation
-proteasome_r_anno <- data.frame(gene = gene_order, 
-                                psm_gene = 0)
-
-proteasome_r_anno[grep(pattern = "PSM|UBE2|UBB|UBC", x = proteasome_r_anno$gene), "psm_gene"] <- 1
-
-r_anno_color <- c("0" = "white", "1" = "black")
-r_anno <- ggplot(proteasome_r_anno) +
-  geom_bar(mapping = aes(x = 1, y = gene, fill = as.character(psm_gene)), 
-           stat = "identity", 
-           width = 1) +
-  scale_fill_manual(values = r_anno_color, breaks = "1", name = "", labels = "PSM Gene") +
-  theme_void() 
-legend <- plot_grid(get_legend(r_anno), ncol = 1)
-r_anno <- r_anno + theme(legend.position = "none")
-
-## left annotatoin data generation
-l_anno <- path_match_in_set %>% .[match(gene_order, .$gene_name),] ## order by the gene order from the heatmap
-
-## need to get top path names again
-load("../data/moderate_enrich_prob.Rda")
-enrich_cutoff <- 0.30
-filtered_class <- c(6,7)
-n_path <- 10
-toppath <- moderate_enrich_prob %>% filter(signif <= 2500 & difference >= enrich_cutoff) %>% ## signif is 95% CI with a specified cutoff
-  filter(clust %in% filtered_class) %>% ## filter the cluster
-  arrange(desc(difference)) %>% ## arrange enrichment score in descending order
-  .[, "path"] %>% as.character() %>% unique() %>% .[1:n_path] ## getting the top10 enriched pathways
-
-for(p in toppath){
-  message(p)
-  l_anno <- l_anno %>% mutate(p = 0) ## create a new col named p
-  names(l_anno)[names(l_anno) == 'p'] <- p ## rename col with pathway name
-  ## for any path_combo that includes the pathway name change the 0 into a 1
-  if(p == "AUF1 (hnRNP D0) binds and destabilizes mRNA") { ## if it has this pathway grep a different way
-    l_anno[grep(pattern = "AUF1", x = l_anno$path_combo), p] <- 1
-  }
-  if(p != "AUF1 (hnRNP D0) binds and destabilizes mRNA") { ## if it is not AUF1 do it normally
-  l_anno[grep(pattern = p, x = l_anno$path_combo), p] <- 1 
-  }
-}
-
-l_anno_ggplot <- list() ## list for storing ggplots
-path_legend <- list()
-
-kelly.colours <- c("gray95", "gray13", "gold2", "plum4", "darkorange1",
-                   "lightskyblue2", "firebrick", "burlywood3", "gray51", "springgreen4",
-                   "lightpink2", "deepskyblue4", "lightsalmon2", "mediumpurple4",
-                   "orange", "maroon", "yellow3", "brown4", "yellow4", "sienna4", "chocolate", "gray19")
-
-for(n in 1:length(toppath)){
-  message(n)
-  p <- toppath[n]
-  message(p)
-  spec_path <- l_anno[,c("gene_name", p)]
-  names(spec_path)[names(spec_path) == p] <- "p"
-  anno_color <- c("0" = "white", "1" = kelly.colours[2+n])
-  path_ggplot <- ggplot(spec_path) +
-  geom_bar(mapping = aes(x = 1, y = gene_name, fill = as.character(p)), 
-           stat = "identity", 
-           width = 1) +
-  scale_fill_manual(values = anno_color, breaks = "1", name = "", labels = p) +
-  theme_void() 
-  path_legend[[n]] <- plot_grid(get_legend(path_ggplot), ncol = 1) ## extract legend from plot
-  l_anno_ggplot[[n]] <- path_ggplot + theme(legend.position = "none") ## remove legend from plot
-}
-
-
-plot <- plot_grid(l_anno_ggplot[[1]], l_anno_ggplot[[2]], l_anno_ggplot[[3]], l_anno_ggplot[[4]], l_anno_ggplot[[5]], l_anno_ggplot[[6]], l_anno_ggplot[[7]], l_anno_ggplot[[8]], l_anno_ggplot[[9]], l_anno_ggplot[[10]], fig4, r_anno, align = "h", ncol = 12, axis = "tb", rel_widths = c(rep(0.1, 10), 15, 0.1))
-plot_legend <- plot_grid(path_legend[[1]], path_legend[[2]], path_legend[[3]], path_legend[[4]], path_legend[[5]], path_legend[[6]], path_legend[[7]], path_legend[[8]], path_legend[[9]], path_legend[[10]], ncol = 5)
-
-plot_grid(plot, plot_legend, ncol = 1, rel_heights = c(10, 1.5))
-
-```
+<p style="FONT-SIZE:10px; COLOR:#000000; LINE-HEIGHT:12px;">**Figure 4: Gene level analysis reveals tissue-specific class signatures.** Odds ratio plot; Column uses a logarithmic axis to represent odds ratio with a 95% confidence interval. Row represents the significant genes from each cluster. Each cluster was compared against the background (all other clusters) to find deferentially mutated genes. Significant genes (pvalue < 0.01) were selected and limited to the top ten results for each clusters. Heatmap; Column represents the cancer type. Row represents the significant genes as described above. The heatmap shows the proportion of samples per cluster, per cancer type that is mutated for each of the significant genes. Depleted significant genes (left). Enriched significant genes (right).</p>
