--- a/code/table1.Rmd
+++ b/code/table1.Rmd
@@ -114,7 +114,7 @@ tumor_clusters <- fread("../data/umap_3d_coors.tsv") ## load in data
 n_tumor <- as.data.frame(table(tumor_clusters$project_code))
 n_tumor <- n_tumor %>% arrange(desc(Freq)) %>% .[1:10, "Var1"] %>% as.character() %>% .[order(.)]
 
-cluster_spec_enrich_table %>% .[, c("Pathway", "Class", n_tumor)] %>% knitr::kable(format = "html", row.names = FALSE) %>%
+cluster_spec_enrich_table %>% .[, c("Pathway", "Class", n_tumor)] %>% knitr::kable(row.names = FALSE) %>%
   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE, font_size = 12) %>%
   column_spec(1, bold = T)
 ```
