--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -2,18 +2,10 @@
 title: "A molecular taxonomy of tumors independent of tissue-of-origin"
 author: "Peter T. Nguyen$^{1}$, Simon G. Coetzee$^{1}$, Daniel L. Lakeland$^{2}$, and Dennis J. Hazelett$^{1,3}$"
 output: 
-  bookdown::html_document2:
-    fig_captions: TRUE
+    bookdown::word_document2:
     number_sections: FALSE
-    toc: TRUE
-    toc_float: TRUE
-    toc_depth: 3
-    code_folding: hide
-    theme: flatly
-    smart: true
+    toc: FALSE
 bibliography: references.bib
-editor_options: 
-  chunk_output_type: console
 ---
 
 ###### Institutional affiliations: 1. The Center for Bioinformatics and Functional Genomics, Cedars-Sinai Medical Center, Los Angeles, California. 2. Lakeland Applied Sciences LLC, Los Angeles, CA. 3. Samuel Oschin Comprehensive Cancer Institute, Cedars-Sinai Medical Center, Los Angeles, CA.
@@ -23,10 +15,24 @@ editor_options:
     number_sections: FALSE
     toc: FALSE
     keep_tex: yes
+    
+  bookdown::html_document2:
+    fig_captions: TRUE
+    number_sections: FALSE
+    toc: TRUE
+    toc_float: TRUE
+    toc_depth: 3
+    code_folding: hide
+    theme: flatly
+    smart: true
+    
+  bookdown::word_document2:
+    number_sections: FALSE
+    toc: FALSE
 ```
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, dpi=600)
 suppressPackageStartupMessages(c(
   library(rstan),
   library(foreach),
@@ -60,7 +66,8 @@ suppressPackageStartupMessages(c(
   library(FactoMineR),
   library(seriation),
   library(rtracklayer),
-  library(poibin)
+  library(poibin),
+  library(flextable)
 ))
 ```
 
@@ -261,6 +268,7 @@ mutation frequency (**figure 1A** and **supplementary table ST1**), possibly
 owing to relative diversity among all tumors.
 
 ```{r child='../code/figure2.Rmd'}
+
 ```
 
 
@@ -286,6 +294,7 @@ enrichment levels of the three, having mutations in hedgehog signaling,
 "$\beta$-catenin degradation", "cellular response to hypoxia", "regulation of
 cell cycle" and "apoptosis" among others.
 
+<strike>
 ### Gene-Pathway redundancy contributes to cluster identity
 
 Since pathways share some common driver genes, we investigated whether
@@ -321,8 +330,7 @@ clustering. These data could explain how tissue-specific gene mutation
 signatures might result in general cancer phenotypes by converging at the
 pathway level.
 
-```{r child='../code/figure4_function.Rmd'}
-```
+
 
 The proteasome plays key roles in the transduction of signals from the p53, WNT
 and NFkB pathways and it and proteasomal inhibitors have been approved for
@@ -342,25 +350,38 @@ dysregulation of the proteasomal complex activities that target cancer-promoting
 pathways. Taken together, our data suggest that mutations in proteasomal
 subunits are more widespread in cancer than previously appreciated and may
 represent a targetable category of tumors.
+</strike>
+
+```{r child = '../code/figure4.Rmd'}
+
+```
+
 
 ### A combination of common driver mutations and tissue-specific pathway genes create tissue-specific class signatures
 
-<mark>As discussed previously, prior efforts to extract common signatures from
+As discussed previously, prior efforts to extract common signatures from
 pan-cancer datasets met with difficulty in distinguishing tumor samples from
 their tissue-specific -omics data signatures. Given our pathway-disruption based
 classification, this raises the question, are tumor phenotypes driven entirely
 by common driver genes, or by "silent" tissue-specific effectors ( _i.e._ too
 few samples to detect above statistical significance thresholds), or a
-combination of both? To answer this question, we ranked the top cluster-specific
-pathways for each cluster, and then tabulated the most frequently mutated genes
-for each pathway as a function of cancer type (**Table 1** and **Supplementary tables ST2-ST13**). 
-We find that in most clusters the top pathways are
-determined by mutations in a handful of driver genes, TP53, PIK3CA, KRAS etc.
-However in many cancers we find divergence outside these top driver mutations,
-wherein etc etc</mark>
-
-```{r child='../code/table1.Rmd'}
-```
+combination of both? To answer this question, we compared each cluster relative
+to the background to find deferentially mutated genes. We ranked the odd ratios 
+and selected the top ten enriched and depleted genes (pvalue < 0.01) for each 
+cluster (**Figure 4**; odds ratios plot). We find that the clusters possess 
+unique gene sets. Cluster 2 is enriched for genes responsible for protein
+homeostasis. Cluster 4 is enriched for genes responsible for nucleosome 
+structure. Clusters 7 and 8, which shared multiple enrichment in signaling
+pathways, are largely driven by mutations in _PI3K_ and its homologs and _Ras_ 
+genes, respectively (compare _PIK3CA_ and _KRAS_ panels of **Supplementary figure S5**). 
+Interestingly, cluster 9 is enriched for both _PIK3CA_ and _KRAS_ which may
+suggest tumors in this cluster derived from either clusters 7 or 8. Next, we 
+investigated the proportion of samples per cancer type for the significant genes 
+within a cluster (**Figure 4**; heatmap). Surprisingly, cluster-specific tumors 
+were not predominated by one or more highly mutated genes across all cancers. 
+Instead, some cancer-specific tumors in these classes had mutation profiles that
+differ from one another (_e.g._ In cluster 2, LIHC was enriched for _PSME4_, KIRC
+was enriched for _UBC_, and PAAD was enriched for _PSMA1_).
 
 ### Enrichment of pathways in metastasis is class-specific
 
@@ -374,12 +395,12 @@ metastasis enrichment signal given the small sample size (n = 215 metastatic
 tumor samples).
 
 Therefore, we calculated cluster-specific enrichment in metastatic tumors and
-found a total of 27 enriched pathways across all clusters (**table 2**). A number of
+found a total of 27 enriched pathways across all clusters (**table 1**). A number of
 enrichments were found in multiple clusters represented by pathways that were
 already shown to be enriched in a neighboring cluster. For example,
 “Signaling by PTK6” is enriched in non-metastatic samples of cluster 8 (see 
 **supplementary figure S4**) but not in 7 and 9. This pathway is enriched in
-metastatic tumors of clusters 7 and 9 (p < 10-3, **table 2**). This is also true of 
+metastatic tumors of clusters 7 and 9 (p < 10-3, **table 1**). This is also true of 
 “Erythropoietin activates RAS”, which is enriched in cluster 8 (**supplementary figure
 S4**) and also in metastatic tumors of clusters 7 and 9. <strike>Cluster 1, one of two clusters 
 for which we could not identify any distinguishing pathways (cluster 8 being the other), 
@@ -403,16 +424,11 @@ in cluster-specific metastases, including “G1/S DNA Damage Checkpoints”,
 dependent signaling in response to WNT”, “Class I MHC mediated antigen
 processing & presentation”, “Chaperonin-mediated protein folding”, “Intrinsic
 Pathway for Apoptosis”, “Cellular Senescence”, “DNA Double-Strand Break
-Response”, and “Pre-NOTCH Expression and Processing” (**Table 2**). </strike>
+Response”, and “Pre-NOTCH Expression and Processing” (**Table 1**). </strike>
 
 ### Pathway disruption classes vary in short-term prognosis of survival
 
 ```{r child='survival.Rmd'}
-```
-
-```{r umap-global-trends, fig.cap="Placeholder for figure 1", results=FALSE, eval=FALSE}
-set.seed(21)
-plot(x=rnorm(1000), y=rnorm(1000))
 ```
 
 
