add Mourikis et al reference to introduction, references

--- a/text/references.bib
+++ b/text/references.bib
@@ -590,3 +590,16 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   pmid = {31900418},
   doi = {10.1038/s41467-019-13803-0}
 }
+
+@article{mourikis-ml-pathways,
+  author = {Mourikis, T.P. and Benedetti, L. and Foxall, E. and Temelkovski, D. and
+Nulsen, J. and Perner, J. and Cereda, M. and Lagergren, J. and Howell, M. and Yau, C. and
+Fitzgerald, R.C. and Scaffidi, P. and The Oesophageal Cancer Clinical and Molecular Stratification (OCCAMS) Consortium and Ciccarelli, F.D.},
+  title = {Patient-specific cancer genes contribute to recurrently perturbed pathways and establish therapeutic vulnerabilities in esophageal adenocarcinoma},
+  journal = {Nature Communications},
+  volume = {10},
+  number = {1},
+  pages = {e3101},
+  pmid = {31308377},
+  doi = {10.1038/s41467-019-10898-3}
+}
