--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -5,7 +5,7 @@ author: Peter T. Nguyen$^{1}$, Simon G. Coetzee$^{1}$, Daniel L. Lakeland$^{2}$,
 bibliography: references.bib
 output:
   word_document:
-    reference_docx: word-style-reference-ttmanu.docx
+    reference_docx: "../text/word-style-reference-ttmanu.docx"
 always_allow_html: TRUE
 editor_options:
   chunk_output_type: console
@@ -90,7 +90,6 @@ suppressPackageStartupMessages(c(
 ## Results
  
 ### A taxonomy of tumors based on disrupted molecular pathways
- 
 To study cancer pathways we obtained a set of 7,607 solid tumor samples from The
 Cancer Genome Atlas (TCGA) through the [Genomic Data Commons
 (GDC)](gdc.cancer.gov) portal. TCGA data because were most appropriate for our
@@ -353,29 +352,30 @@ represent a targetable category of tumors.
 
 ### A combination of common driver mutations and tissue-specific pathway genes create tissue-specific class signatures
 
-As discussed previously, prior efforts to extract common signatures from
-pan-cancer datasets met with difficulty in distinguishing tumor samples from
-their tissue-specific -omics data signatures. Given our pathway-disruption based
-classification, this raises the question, are tumor phenotypes driven entirely
-by common driver genes, or by "silent" tissue-specific effectors ( _i.e._ too
-few samples to detect above statistical significance thresholds), or a
-combination of both? To answer this question, we compared each cluster relative
-to the background to find deferentially mutated genes. We ranked the odd ratios 
-and selected the top ten enriched and depleted genes (pvalue < 0.01) for each 
-cluster (**Figure 4**; odds ratios plot). We find that the clusters possess 
-unique gene sets. Cluster 2 is enriched for genes responsible for protein
-homeostasis. Cluster 4 is enriched for genes responsible for nucleosome 
-structure. Clusters 7 and 8, which shared multiple enrichment in signaling
-pathways, are largely driven by mutations in _PI3K_ and its homologs and _Ras_ 
+As discussed previously, prior efforts to extract common signatures from pan-cancer 
+datasets met with difficulty in distinguishing tumor samples from their tissue-specific 
+-omics data signatures. Given our pathway-disruption based classification, this raises 
+the question, are tumor phenotypes driven entirely by common driver genes, or by “silent”
+tissue-specific effectors ( _i.e._ too few samples to detect above statistical significance 
+thresholds), or a combination of both? To answer this question, we compared each cluster 
+relative to the background to find deferentially mutated genes. We ranked the odd ratios
+and selected the top ten enriched and depleted genes (pvalue < 0.01) for each cluster 
+(**Figure 4**; odds ratios plot). Clusters 7 and 8, which shared multiple enrichment in 
+signaling pathways, are largely driven by mutations in _PI3K_ and its homologs and _Ras_ 
 genes, respectively (compare _PIK3CA_ and _KRAS_ panels of **Supplementary figure S5**). 
-Interestingly, cluster 9 is enriched for both _PIK3CA_ and _KRAS_ which may
-suggest tumors in this cluster derived from either clusters 7 or 8. Next, we 
-investigated the proportion of samples per cancer type for the significant genes 
-within a cluster (**Figure 4**; heatmap). Surprisingly, cluster-specific tumors 
-were not predominated by one or more highly mutated genes across all cancers. 
-Instead, some cancer-specific tumors in these classes had mutation profiles that
-differ from one another (_e.g._ In cluster 2, LIHC was enriched for _PSME4_, KIRC
-was enriched for _UBC_, and PAAD was enriched for _PSMA1_).
+Interestingly, cluster 9, which also shared multiple enrichment in signaling pathways 
+with clusters 7 and 8, is enriched for both _PIK3CA_ and _KRAS_. This result suggests 
+that tumors in this cluster could be a derivative either cluster 7 or 8. Clusters 3 and 
+5, defined by enrichment in metabolic pathways, had mutations in ribosomal proteins and 
+nuclear pore complex, respectively. Cluster 4 had mutations in genes responsible for 
+nucleosome structure. Cluster 2 had mutations in genes involved in protein degradation. 
+Next, we investigated the proportion of samples per cancer type for the significant genes
+within a cluster (**Figure 4**; heatmap). Surprisingly, cluster-specific tumors were not 
+predominated by one or more highly mutated genes across all cancers. Instead, several 
+cancer-specific tumors in these classes had mutation profiles that differ from one another 
+( _e.g._ In cluster 2, LIHC was enriched for _PSME4_, KIRC was enriched for _UBC_, and 
+PAAD was enriched for _PSMA1_). Taken together, our data identifies a framework cancer 
+type specific mutation associated with a specific cluster.  
 
 ### Enrichment of pathways in metastasis is class-specific
 
@@ -489,20 +489,26 @@ biologically relevant.
 
 ```{r child='survival-methods.Rmd'}
 ```
+\newpage
+```{r child='../text/fig_legend.Rmd'}
+```
 
+\newpage
 ```{r child='../code/figure1.Rmd'}
 ```
-
+\newpage
 ```{r child='../code/figure2.Rmd'}
 ```
-
+\newpage
 ```{r child = '../code/figure4.Rmd'}
 ```
-
+\newpage
 ```{r child='../code/table2.Rmd'}
 ```
+\newpage
 
 ![](../figures/fig6B.png)
+\pagebreak
 ![](../figures/fig6C.png)
 
 ## Supplementary Information
